force-app/main/default/objects/sugati__Special_Offer_Rule__c/sugati__Special_Offer_Rule__c.object-meta.xml
<CustomObject>
    <label>Special Offer Rule</label>
    <nameField>
        <displayFormat>SOR-{00000}</displayFormat>
        <label>Rule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Offer Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>