force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Carrier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Carrier__c</fullName>
    <inlineHelpText>Only for Flight.</inlineHelpText>
    <label>Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>