force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Component_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Component Name</label>
    <type>Text</type>
</CustomField>