force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Continent__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Continent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Continent</label>
    <referenceTo>sugati__Continent__c</referenceTo>
    <relationshipLabel>Special Offer Rules</relationshipLabel>
    <relationshipName>Special_Offer_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>