force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Excluded_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Excluded_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This supplier will not applicable for this special offer.</inlineHelpText>
    <label>Excluded Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Special Offer Rules (Excluded Supplier)</relationshipLabel>
    <relationshipName>Special_Offer_Rules2</relationshipName>
    <type>Lookup</type>
</CustomField>