force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Excluded_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Excluded_Suppliers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>These suppliers will not applicable for this special offer.</description>
    <inlineHelpText>These suppliers will not applicable for this special offer.</inlineHelpText>
    <label>Excluded Suppliers</label>
    <referenceTo>sugati__Set_Suppliers__c</referenceTo>
    <relationshipLabel>Special Offer Rules (Excluded Suppliers)</relationshipLabel>
    <relationshipName>Special_Offer_Rules_Excluded</relationshipName>
    <type>Lookup</type>
</CustomField>