force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Min_Pax__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Min_Pax__c</fullName>
    <inlineHelpText>offer required a minimum pax.</inlineHelpText>
    <label>Min Pax</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>