force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Minimum_Quantity__c</fullName>
    <inlineHelpText>For example, If Component is Accommodation, Minimum Quantity is Minimum Nights.</inlineHelpText>
    <label>Minimum Quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>