force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Minimum_Quantity_Based_On__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Minimum_Quantity_Based_On__c</fullName>
    <defaultValue>&quot;Duration&quot;</defaultValue>
    <label>Minimum Quantity Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duration</fullName>
            </value>
            <value>
                <fullName>Nights</fullName>
            </value>
            <value>
                <fullName>Number of items on IB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>