force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Name__c</fullName>
    <inlineHelpText>This help to explain the rule.</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>