force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_No_of_Different_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_No_of_Different_Suppliers__c</fullName>
    <inlineHelpText>offer required at least a number of different suppliers.</inlineHelpText>
    <label>No of Different Suppliers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>