force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Order__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Order__c</fullName>
    <inlineHelpText>Being used in Filter Logic.</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>