force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Parent_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Parent_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Special Offer Rules (Parent Supplier)</relationshipLabel>
    <relationshipName>Special_Offer_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>