force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Parent_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Parent_Suppliers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>childs of these suppliers will be applied.</inlineHelpText>
    <label>Parent Suppliers</label>
    <referenceTo>sugati__Set_Suppliers__c</referenceTo>
    <relationshipLabel>Special Offer Rules (Parent Suppliers)</relationshipLabel>
    <relationshipName>Special_Offer_Rules_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>