force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Required_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Required_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only applicable if &quot;No of Different Suppliers&quot; is more than 1. 
e.g: Book to stay at 2 of The Safari Collection’s properties(required Giraffe Manor).</inlineHelpText>
    <label>Required Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Special Offer Rules</relationshipLabel>
    <relationshipName>Special_Offer_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>