force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Service_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Service_From__c</fullName>
    <label>Service From</label>
    <type>Date</type>
</CustomField>