force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Special_Offer__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Special_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Offer</label>
    <referenceTo>sugati__Special_Offer__c</referenceTo>
    <relationshipLabel>Special Offer Rules</relationshipLabel>
    <relationshipName>Special_Offer_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>