force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Apply for this supplier.</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Special Offer Rules (Supplier)</relationshipLabel>
    <relationshipName>Special_Offer_Rules3</relationshipName>
    <type>Lookup</type>
</CustomField>