force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Supplier_Condition__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Supplier_Condition__c</fullName>
    <inlineHelpText>Default value is &quot;Only apply for this supplier&quot;.</inlineHelpText>
    <label>Supplier Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Including this supplier</fullName>
            </value>
            <value>
                <fullName>Only apply for this supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>