force-app/main/default/objects/sugati__Special_Offer_Rule__c/fields/sugati__SOR_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>sugati__SOR_Suppliers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>only these suppliers will be eligible for offer.</inlineHelpText>
    <label>Suppliers</label>
    <referenceTo>sugati__Set_Suppliers__c</referenceTo>
    <relationshipLabel>Special Offer Rules</relationshipLabel>
    <relationshipName>Special_Offer_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>