force-app/main/default/objects/sugati__Special_Offer_Rule__c/recordTypes/sugati__Carrier.recordType-meta.xml
<RecordType>
    <fullName>sugati__Carrier</fullName>
    <active>true</active>
    <label>Carrier</label>
</RecordType>