force-app/main/default/objects/sugati__Special_Offer_Rule__c/recordTypes/sugati__Continent.recordType-meta.xml
<RecordType>
    <fullName>sugati__Continent</fullName>
    <active>true</active>
    <label>Continent</label>
</RecordType>