force-app/main/default/objects/sugati__Special_Offer_Rule__c/recordTypes/sugati__Country.recordType-meta.xml
<RecordType>
    <fullName>sugati__Country</fullName>
    <active>true</active>
    <label>Country</label>
</RecordType>