force-app/main/default/objects/sugati__Special_Offer_Rule__c/recordTypes/sugati__Excluded_Supplier.recordType-meta.xml
<RecordType>
    <fullName>sugati__Excluded_Supplier</fullName>
    <active>true</active>
    <label>Excluded Supplier</label>
</RecordType>