force-app/main/default/objects/sugati__Special_Offer_Rule__c/recordTypes/sugati__Minimum_Quantity.recordType-meta.xml
<RecordType>
    <fullName>sugati__Minimum_Quantity</fullName>
    <active>true</active>
    <label>Minimum Quantity</label>
</RecordType>