force-app/main/default/objects/sugati__Special_Offer_Rule__c/recordTypes/sugati__Parent_Supplier.recordType-meta.xml
<RecordType>
    <fullName>sugati__Parent_Supplier</fullName>
    <active>true</active>
    <label>Parent Supplier</label>
</RecordType>