force-app/main/default/objects/sugati__Special_Offer_Rule__c/recordTypes/sugati__Service_Date.recordType-meta.xml
<RecordType>
    <fullName>sugati__Service_Date</fullName>
    <active>true</active>
    <label>Service Date</label>
</RecordType>