force-app/main/default/objects/sugati__Special_Offer_Rule__c/recordTypes/sugati__Supplier.recordType-meta.xml
<RecordType>
    <fullName>sugati__Supplier</fullName>
    <active>true</active>
    <description>Apply for this supplier</description>
    <label>Supplier</label>
</RecordType>