force-app/main/default/objects/sugati__Special_Offer_Rule__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__SOR_Name__c</columns>
    <columns>sugati__SOR_Minimum_Quantity__c</columns>
    <columns>sugati__SOR_Component_Name__c</columns>
    <columns>sugati__SOR_Special_Offer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>